<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.photogalleryapp.SearchActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Search Filters"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_search"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/title_search"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="30dp"
        android:id="@+id/search_fromDate" />

    <TextView
        android:id="@+id/search_fromDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_search"
        android:layout_alignBottom="@+id/search_fromDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="11dp"
        android:text="From Date: " />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="20dp"
        android:id="@+id/search_toDate" />

    <TextView
        android:id="@+id/search_toDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignTop="@+id/search_toDate"
        android:layout_alignBottom="@+id/search_toDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="11dp"
        android:text="To Date: " />

    <Button
        android:id="@+id/search_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:onClick="cancel"
        android:text="Cancel" />

    <Button
        android:id="@+id/search_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#2196F3"
        android:onClick="search"
        android:text="Search" />

    <EditText
        android:id="@+id/captionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_toDate"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/captionText"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/captionText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="11dp"
        android:text="Caption:" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Use YYYY-MM-DD Date Format" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editLat"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="11dp"
        android:text="Latitude" />

    <TextView
        android:id="@+id/lat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editLong"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="11dp"
        android:text="Longitude" />

    <TextView
        android:id="@+id/dist"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editDist"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="11dp"
        android:text="Radial Distance" />

    <EditText
        android:id="@+id/editLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLat"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginTop="20dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editDist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLong"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:ems="10" />


</RelativeLayout>
